CSS: increase width of column and prevent white-space wrap.

--- a/src/components/Shared/styles/react-bootstrap-table.module.scss
+++ b/src/components/Shared/styles/react-bootstrap-table.module.scss
@@ -29,6 +29,7 @@ table {
 			color: white;
 			cursor: pointer;
 			font-size: 0.9rem;
+			white-space: nowrap;
 		}
 
 		& span.actionIcons svg {
